# aml-admin

./: .dockerignore  .editorconfig  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_dod_notebook.sh  run_notebook.sh
.docker/app/: Dockerfile  entrypoint.sh
.docker/base/: Dockerfile
.docker/nginx/: Dockerfile  nginx.conf
administration/: models.py  urls_ops.py
administration/fixtures/: staff_roles.yaml
administration/forms/: _widgets.py  broadcast_message.py  email_distribution_control.py  users_and_roles.py
administration/migrations/: 0001_initial.py  0002_alter_permissions_options.py
administration/templates/: broadcast_message.html  broadcast_message_activity_log.html  email_distribution_control.html  staff_user_invite_modal.html  staff_user_onboarding.html  users_and_roles.html
administration/views/: broadcast_message.py  email_distribution_control.py  staff_roles.py  staff_users.py
ads_bridge/: apps.py  models.py  sync.py  tasks.py
ads_bridge/migrations/: 0001_initial.py
aircraft/: form_widgets.py  forms.py  models.py  tasks.py  views.py
aircraft/migrations/: 0001_initial.py  (+25 more)
api/: auth_class.py  exceptions.py  mixins.py  urls.py  urls_admin.py
app/: admin_urls.py  asgi.py  asgi_dod.py  celery.py  custom_model_fields.py  dbrouters.py  middlewares.py  settings.py  settings_dev.py  settings_dev_dod.py  settings_dod.py  storage_backends.py  urls.py  urls_dod.py  wsgi_dod.py
chat/: consumers.py  middleware.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
core/: context_processors.py  custom_form_fields.py  form_widgets.py  forms.py  mixins.py  tasks.py  views_debug.py
crm/: form_widgets.py  forms.py  models.py  views.py
dla_scraper/: apps.py  forms.py  models.py  tasks.py  views.py
dod_portal/: apps.py  backends.py  forms.py  middlewares.py  mixins.py  urls.py
frontpage/: forms.py  urls_frontpage.py  views.py
handling/: apps.py  form_widgets.py  mixins.py  serializers.py  tasks.py  urls_ops.py
mission/: urls_ops.py
organisation/: form_widgets.py  forms.py  mixins.py  urls_api.py
pricing/: fields.py  form_widgets.py  mixins.py  tasks.py  urls_ops.py
staff/: urls_api.py  urls_ops.py
supplier/: urls_ops.py
user/: backends.py  form_widgets.py  forms.py  mixins.py
(+1513 files in other folders)
